syntax = "proto3";

package test.streamrpc;

option go_package = "gitlab.com/gitlab-org/gitaly/v14/internal/streamrpc/testdata";

import "google/protobuf/empty.proto";

service Test {
  rpc Stream(StreamRequest) returns (google.protobuf.Empty) {}
}

message StreamRequest {
  bool fail = 1;
  string string_field = 2;
}
